logo added, feed page navbar

--- a/social-app/feed.html
+++ b/social-app/feed.html
@@ -8,6 +8,19 @@
   <body>
     <div class="feed-page">
       <div class="div">
+        <div class="menu-bar">
+          <div class="overlap-group">
+            <div class="navbar">
+                <a href="today.html" class="text-wrapper">today</a>
+                <a href="feed.html" class="text-wrapper">feed</a>
+                <a href="challenges.html" class="text-wrapper">challenges</a>
+                <a href="calendar.html" class="text-wrapper">calendar</a>
+                <a href="friends.html" class="text-wrapper">friends</a>
+                <a href="settings.html" class="text-wrapper">settings</a>
+            </div>
+            <img class="logo" src="nwhacks-logo.png" style="width:80px;height:80px;"/>
+          </div>
+        </div>
         <div class="frame">
           <div class="me"><div class="text-wrapper">me</div></div>
           <div class="zainab">
@@ -46,20 +59,6 @@
             <img class="img-2" src="img/image-3.png" />
             <img class="img-2" src="img/screenshot-2024-01-20-at-9-10-1.png" />
             <img class="img-2" src="img/image-4.png" />
-          </div>
-        </div>
-        <div class="div">
-        <div class="menu-bar">
-          <div class="overlap-group">
-            <div class="navbar">
-                <a href="today.html" class="text-wrapper">today</a>
-                <a href="feed.html" class="text-wrapper">feed</a>
-                <a href="challenges.html" class="text-wrapper">challenges</a>
-                <a href="calendar.html" class="text-wrapper">calendar</a>
-                <a href="friends.html" class="text-wrapper">friends</a>
-                <a href="settings.html" class="text-wrapper">settings</a>
-            </div>
-            <img class="image" src="img/image-8.png" />
           </div>
         </div>
       </div>
