--- a/social-app/index.html
+++ b/social-app/index.html
@@ -8,19 +8,19 @@
   <body>
     <div class="log-in-page">
       <div class="div">
-        <div class="text-wrapper">Log In</div>
-        <div class="text-wrapper-2">forgot password?</div>
+        <h1>Log In</h1>
+        <div class="forgot-pw">forgot password?</div>
         <a href="today.html" class="log-in-button">
           <div class="overlap-group">
-            <div class="text-wrapper-3">log in</div>
+            <div class="button-text">log in</div>
           </div>
         </a>        
         <button class="sign-up-button">
-          <div class="overlap"><div class="text-wrapper-4">sign up</div></div>
+          <div class="overlap"><div class="button-text">sign up</div></div>
         </button>
         <input type="email" id="email" class="email-box" placeholder="email">
         <input type="password" id="password" class="pw-box" placeholder="password">
-        <img class="image" src="img/image-7.png" />
+        <img class="logo" src="nwhacks-logo.png" alt="logo" style="width:80px;height:80px;"/>
       </div>
     </div>
   </body>
