--- a/social-app/today.html
+++ b/social-app/today.html
@@ -18,7 +18,7 @@
                 <a href="friends.html" class="text-wrapper">friends</a>
                 <a href="settings.html" class="text-wrapper">settings</a>
             </div>
-            <img class="image" src="img/image-8.png" />
+            <img class="logo" src="nwhacks-logo.png" style="width:80px;height:80px;"/>
           </div>
         </div>
         <div class="text-wrapper-2">Hello, Michelle</div>
